--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         </div>
     </nav>
 
-    <section id="about-me">
+    <section class="about-me">
         <div class="about-me-text">
             <h2>About Me</h2>
-            <p>Hi! My name is Matt Gibbons and I am a Front-End Developer based in Kingston, New York. At 30 years old, I decided to self-teach myself web development and jump into a new career.</p>
-            <p>I graduated from SUNY Cortland in 2015 with a Bachelors' Degree in Sport Management and realized working in sports wasn't the direction I wanted to go. After a few years of bouncing between jobs and not having that feeling of being fulfilled career wise, I dove right in and dedicated my time to learning Front-End Development.</p>
-            <p>In my free time I enjoy the misery of being a Mets, Islanders, and very randomly, a Tennessee Titans fan. Don't ask me why the Titans because I have no clue! Besides watching sports, I also like to play them recreationally, working out has recently become a passion, checking out different breweries, and of course a nice binge session of a show.</p>
-            <img src="resources/img/me.jpeg">
+            <p>Hi! My name is Matt Gibbons and I am a Front-End Developer based in Kingston,<br> New York. At 30 years old, I decided to self-teach myself web development and<br> jump into a new career.</p>
+            <p>I graduated from SUNY Cortland in 2015 with a Bachelors' Degree in Sport Management<br> and realized working in sports wasn't the direction I wanted to go. After a few years<br> of bouncing between jobs and not having that feeling of being fulfilled career wise,<br> I dove right in and dedicated my time to learning Front-End Development.</p>
+            <p>In my free time I enjoy the misery of being a Mets, Islanders, and very randomly,<br> a Tennessee Titans fan. Don't ask me why the Titans because I have no clue! Besides<br> watching sports, I also like to play them recreationally, working out has recently<br> become a passion, checking out different breweries, and of course a nice binge session of a show.</p>
         </div>
+            <img src="resources/img/me.jpeg" class="self">
     </section>
 
-    <section id="certificates">
+    <section class="certificates">
         <h2>Certificates</h2>
         <ul>
             <li>Codecademy Front-End Engineer Career Path</li>
@@ -37,14 +37,19 @@
         </ul>
     </section>
 
-    <section id="projects">
+    <section class="projects">
         <h2>Projects</h2>
     </section>
 
-    <section id="contact">
+    <section class="contact">
         <h2>Contact</h2>
-        <span>mgibbons@gmail.com</span>
-        <span>(845)417-6894</span>
+        <p>mgibbons@gmail.com</p>
+        <p>(845)417-6894</p>
+    <div class="icons">
+        <a href="https://twitter.com/Matt_Gibbons5"><img src="resources/img/twitter.png"></a>
+        <a href="https://www.instagram.com/matt_gibbons5/"><img src="resources/img/instagram.jpg"></a>
+        <a href="https://www.linkedin.com/in/gibbonsmatt/"><img src="resources/img/linkedin.png"></a>
+    </div>
     </section>
 </body>
 </html>
