--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
     <title>Matt Gibbons</title>
 </head>
 <body>
-    <nav>
-        <h1>Matt Gibbons</h1>
-        <div class="nav-links">
-            <a href #about-me>About Me</a>
-            <a href #certificates>Certificates</a>
-            <a href #projects>Projects</a>
-            <a href #contact>Contact</a>
-        </div>
+    <nav class="navbar">
+        <ul class="nav-links">
+            <li><a href #about-me>About Me</a></li>
+            <li><a href #certificates>Certificates</a></li>
+            <li><a href #skills>Skills</a></li>
+            <li><a href #projects>Projects</a></li>
+            <li><a href #contact>Contact</a></li>
+        </ul>
     </nav>
 
     <section class="about-me">
         <div class="about-me-text">
             <h2>About Me</h2>
             <p>Hi! My name is Matt Gibbons and I am a Front-End Developer based in Kingston,<br> New York. At 30 years old, I decided to self-teach myself web development and<br> jump into a new career.</p>
+            <p>As a web developer, my goal is to create fun, unique, and fast websites. </p>
             <p>I graduated from SUNY Cortland in 2015 with a Bachelors' Degree in Sport Management<br> and realized working in sports wasn't the direction I wanted to go. After a few years<br> of bouncing between jobs and not having that feeling of being fulfilled career wise,<br> I dove right in and dedicated my time to learning Front-End Development.</p>
             <p>In my free time I enjoy the misery of being a Mets, Islanders, and very randomly,<br> a Tennessee Titans fan. Don't ask me why the Titans because I have no clue! Besides<br> watching sports, I also like to play them recreationally, working out has recently<br> become a passion, checking out different breweries, and of course a nice binge session of a show.</p>
         </div>
@@ -37,17 +38,29 @@
         </ul>
     </section>
 
+    <section class="skills">
+        <h2>Skills</h2>
+        <div class="skills-icons">
+            <img src="resources/img/html5blackk.jpg">
+            <img src="resources/img/css3black.jpg">
+            <img src="resources/img/javablack.jpg">
+            <img src="resources/img/github.png">
+            <img src="resources/img/git.png">
+        </div>
+    </section>
+
     <section class="projects">
         <h2>Projects</h2>
     </section>
 
     <section class="contact">
         <h2>Contact</h2>
-        <p>mgibbons@gmail.com</p>
+        <h3>Let's Get Started</h3>
+        <p>mgibbons8592@gmail.com</p>
         <p>(845)417-6894</p>
     <div class="icons">
         <a href="https://twitter.com/Matt_Gibbons5"><img src="resources/img/twitter.png"></a>
-        <a href="https://www.instagram.com/matt_gibbons5/"><img src="resources/img/instagram.jpg"></a>
+        <a href="https://www.instagram.com/matt_gibbons5/"><img src="resources/img/insta.png"></a>
         <a href="https://www.linkedin.com/in/gibbonsmatt/"><img src="resources/img/linkedin.png"></a>
     </div>
     </section>
