--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <nav class="navbar">
-        <ul class="nav-links">
-            <li><a href #about-me>About Me</a></li>
-            <li><a href #certificates>Certificates</a></li>
-            <li><a href #skills>Skills</a></li>
-            <li><a href #projects>Projects</a></li>
+        <ul>
+            <span>Matt Gibbons</span>
             <li><a href #contact>Contact</a></li>
+            <li><a href #projects>Projects</a></li>
+            <li><a href #skills>Skills</a></li>
+            <li><a href #certificates>Certificates</a></li>
+            <li><a href #about-me>About Me</a></li>
         </ul>
     </nav>
 
@@ -25,8 +26,8 @@
             <p>As a web developer, my goal is to create fun, unique, and fast websites. </p>
             <p>I graduated from SUNY Cortland in 2015 with a Bachelors' Degree in Sport Management<br> and realized working in sports wasn't the direction I wanted to go. After a few years<br> of bouncing between jobs and not having that feeling of being fulfilled career wise,<br> I dove right in and dedicated my time to learning Front-End Development.</p>
             <p>In my free time I enjoy the misery of being a Mets, Islanders, and very randomly,<br> a Tennessee Titans fan. Don't ask me why the Titans because I have no clue! Besides<br> watching sports, I also like to play them recreationally, working out has recently<br> become a passion, checking out different breweries, and of course a nice binge session of a show.</p>
-        </div>
             <img src="resources/img/me.jpeg" class="self">
+        </div>
     </section>
 
     <section class="certificates">
