--- a/index.html
+++ b/index.html
@@ -8,55 +8,82 @@
     <title>Matt Gibbons</title>
 </head>
 <body>
+
+<!--Navigation-->
     <nav class="navbar">
         <ul>
-            <span>Matt Gibbons</span>
-            <li><a href #contact>Contact</a></li>
-            <li><a href #projects>Projects</a></li>
-            <li><a href #skills>Skills</a></li>
-            <li><a href #certificates>Certificates</a></li>
-            <li><a href #about-me>About Me</a></li>
+            <span>Matt Gibbons: Font-End Developer</span>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#certificates">Certificates</a></li>
+            <li><a href="#about-me">About Me</a></li>
         </ul>
     </nav>
 
-    <section class="about-me">
+<!--About Me-->
+    <section id="about-me">
+            <h2 id="header">Who I Am</h2>
         <div class="about-me-text">
-            <h2>About Me</h2>
             <p>Hi! My name is Matt Gibbons and I am a Front-End Developer based in Kingston,<br> New York. At 30 years old, I decided to self-teach myself web development and<br> jump into a new career.</p>
-            <p>As a web developer, my goal is to create fun, unique, and fast websites. </p>
+            <img src="resources/img/me.jpeg">
+            <p>As a web developer, my goal is to create<span style="color: #107896">fun, unique, and fast</span>websites. </p>
             <p>I graduated from SUNY Cortland in 2015 with a Bachelors' Degree in Sport Management<br> and realized working in sports wasn't the direction I wanted to go. After a few years<br> of bouncing between jobs and not having that feeling of being fulfilled career wise,<br> I dove right in and dedicated my time to learning Front-End Development.</p>
-            <p>In my free time I enjoy the misery of being a Mets, Islanders, and very randomly,<br> a Tennessee Titans fan. Don't ask me why the Titans because I have no clue! Besides<br> watching sports, I also like to play them recreationally, working out has recently<br> become a passion, checking out different breweries, and of course a nice binge session of a show.</p>
-            <img src="resources/img/me.jpeg" class="self">
+            <p>In my free time I enjoy the misery of being a Mets, Islanders, and very randomly,<br> a Tennessee Titans fan. Don't ask me why the Titans because I have no clue! Besides<br> watching sports, I also like to play them recreationally, working out has recently<br> become a passion, checking out different breweries, and of course a nice binge<br> session of a show.</p>
+            
         </div>
     </section>
 
-    <section class="certificates">
-        <h2>Certificates</h2>
-        <ul>
-            <li>Codecademy Front-End Engineer Career Path</li>
-            <li>Codecademy Learn CSS</li>
-            <li>Codecademy Learn HTML</li>
-        </ul>
+<!--Certificates-->
+    <section id="certificates">
+        <h2 id="header">Certificates</h2>
+        <div class="courses">
+            <div class="career-path">
+                <span>Codecademy: Front-End Engineer Career Path</span>
+            </div>
+            <div class="css-cert">
+                <span>Codecademy: Learn CSS</span>
+            </div>
+            <div class="html-cert">
+                <span>Codecademy: Learn HTML</span>
+            </div>
+            <div class="java-cert">
+                <span>Codecademy: Learn JavaScript</span>
+            </div>
+        </div>
     </section>
 
-    <section class="skills">
-        <h2>Skills</h2>
+<!--Skills-->
+    <section id="skills">
+        <h2 id="header">Skills</h2>
         <div class="skills-icons">
-            <img src="resources/img/html5blackk.jpg">
-            <img src="resources/img/css3black.jpg">
-            <img src="resources/img/javablack.jpg">
-            <img src="resources/img/github.png">
-            <img src="resources/img/git.png">
+            <div class="html">
+                <img src="resources/img/html5blackk.jpg">
+            </div>
+            <div class="css">
+                <img src="resources/img/css3black.jpg">
+            </div>
+            <div class="java">
+                <img src="resources/img/javablack.jpg">
+            </div>
+            <div class="github">
+                <img src="resources/img/github.png">
+            </div>
+            <div class="git">
+                <img src="resources/img/git.png">
+            </div>
         </div>
     </section>
 
-    <section class="projects">
-        <h2>Projects</h2>
+<!--Projects-->
+    <section id="projects">
+        <h2 id="header">Projects</h2>
     </section>
 
-    <section class="contact">
+<!--Contact-->
+    <section id="contact">
         <h2>Contact</h2>
-        <h3>Let's Get Started</h3>
+        <h3>Lets Get Started</h3>
         <p>mgibbons8592@gmail.com</p>
         <p>(845)417-6894</p>
     <div class="icons">
