--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img src="resources/img/me.jpeg">
             <p>As a web developer, my goal is to create<span style="color: #107896">fun, unique, and fast</span>websites. </p>
             <p>I graduated from SUNY Cortland in 2015 with a Bachelors' Degree in Sport Management<br> and realized working in sports wasn't the direction I wanted to go. After a few years<br> of bouncing between jobs and not having that feeling of being fulfilled career wise,<br> I dove right in and dedicated my time to learning Front-End Development.</p>
-            <p>In my free time I enjoy the misery of being a Mets, Islanders, and very randomly,<br> a Tennessee Titans fan. Don't ask me why the Titans because I have no clue! Besides<br> watching sports, I also like to play them recreationally, working out has recently<br> become a passion, checking out different breweries, and of course a nice binge<br> session of a show.</p>
+            <p>In my free time I enjoy the misery of being a Mets, Islanders, and very randomly,<br> a Tennessee Titans fan. Besides watching sports, I also like to play softball, volleyball,<br> golf, do workout challenges with friends, check out cool breweries, find the perfect Old Fashioned with a big square ice cube, and of course a nice binge session of a show.</p>
             
         </div>
     </section>
@@ -59,18 +59,23 @@
         <div class="skills-icons">
             <div class="html">
                 <img src="resources/img/html5blackk.jpg">
+                <span class="caption">HTML</span>
             </div>
             <div class="css">
                 <img src="resources/img/css3black.jpg">
+                <span class="caption">CSS</span>
             </div>
             <div class="java">
                 <img src="resources/img/javablack.jpg">
+                <span class="caption">Java</span>
             </div>
             <div class="github">
                 <img src="resources/img/github.png">
+                <span class="caption">GitHub</span>
             </div>
             <div class="git">
                 <img src="resources/img/git.png">
+                <span class="caption">Git</span>
             </div>
         </div>
     </section>
