--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
 <!--Projects-->
     <section id="projects">
         <h2 id="header">Projects</h2>
+    <div class="project-pic">
+        <img src="resources/img/teacozy.jpeg">
+        <img src="resources/img/excrusion.jpeg">
+    </div>
     </section>
 
 <!--Contact-->
@@ -95,6 +99,7 @@
         <a href="https://twitter.com/Matt_Gibbons5"><img src="resources/img/twitter.png"></a>
         <a href="https://www.instagram.com/matt_gibbons5/"><img src="resources/img/insta.png"></a>
         <a href="https://www.linkedin.com/in/gibbonsmatt/"><img src="resources/img/linkedin.png"></a>
+        <a href="https://github.com/mgibbons8592"><img src="resources/img/github.png"></a>
     </div>
     </section>
 </body>
