--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 <!--Navigation-->
     <nav class="navbar">
         <ul>
-            <span>Matt Gibbons: Font-End Developer</span>
+            <span><strong>Matt Gibbons: Font-End Developer</strong></span>
             <li><a href="#contact">Contact</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#certificates">Certificates</a></li>
+            <li><a href="#resume">Resume</a></li>
             <li><a href="#about-me">About Me</a></li>
         </ul>
     </nav>
@@ -25,12 +26,20 @@
     <section id="about-me">
             <h2 id="header">Who I Am</h2>
         <div class="about-me-text">
-            <p>Hi! My name is Matt Gibbons and I am a Front-End Developer based in Kingston,<br> New York. At 30 years old, I decided to self-teach myself web development and<br> jump into a new career.</p>
             <img src="resources/img/me.jpeg">
+            <p><strong>Hi! My name is Matt Gibbons</strong>and I am a Front-End Developer based in Kingston,<br> New York. At 30 years old, I decided to self-teach myself web development and<br> jump into a new career.</p>
             <p>As a web developer, my goal is to create<span style="color: #107896">fun, unique, and fast</span>websites. </p>
             <p>I graduated from SUNY Cortland in 2015 with a Bachelors' Degree in Sport Management<br> and realized working in sports wasn't the direction I wanted to go. After a few years<br> of bouncing between jobs and not having that feeling of being fulfilled career wise,<br> I dove right in and dedicated my time to learning Front-End Development.</p>
-            <p>In my free time I enjoy the misery of being a Mets, Islanders, and very randomly,<br> a Tennessee Titans fan. Besides watching sports, I also like to play softball, volleyball,<br> golf, do workout challenges with friends, check out cool breweries, find the perfect Old Fashioned with a big square ice cube, and of course a nice binge session of a show.</p>
+            <p>In my free time I enjoy the misery of being a Mets, Islanders, and very randomly,<br> a Tennessee Titans fan. Besides watching sports, I also like to play softball, volleyball,<br> golf, do workout challenges with friends, check out cool breweries, find the perfect<br> Old Fashioned with a big square ice cube, and of course, a nice binge session of a show.</p>
             
+        </div>
+    </section>
+
+    <!--Resume-->
+    <section id="resume">
+        <h2 id="header">Resume</h2>
+        <div class="resume-pic">
+            <img src="resources/img/Resume.pdf">
         </div>
     </section>
 
@@ -70,7 +79,7 @@
                 <span class="caption">Java</span>
             </div>
             <div class="github">
-                <img src="resources/img/github.png">
+                <img src="resources/img/git.jpeg">
                 <span class="caption">GitHub</span>
             </div>
             <div class="git">
@@ -99,7 +108,7 @@
         <a href="https://twitter.com/Matt_Gibbons5"><img src="resources/img/twitter.png"></a>
         <a href="https://www.instagram.com/matt_gibbons5/"><img src="resources/img/insta.png"></a>
         <a href="https://www.linkedin.com/in/gibbonsmatt/"><img src="resources/img/linkedin.png"></a>
-        <a href="https://github.com/mgibbons8592"><img src="resources/img/github.png"></a>
+        <a href="https://github.com/mgibbons8592"><img src="resources/img/git.jpeg"></a>
     </div>
     </section>
 </body>
