new about me section

--- a/index.html
+++ b/index.html
@@ -22,30 +22,44 @@
         </ul>
     </nav>
 
+<!--Me-->
+    <section id="me">
+            <img src="resources/img/matt.jpeg" alt="me">
+            <p>Matt Gibbons</p>
+            <p>Front-End Developer</p>
+    </section>
+
 <!--About Me-->
     <section id="about-me">
-            <h2 id="header">Who I Am</h2>
-        <div class="about-me-text">
-            <img src="resources/img/me.jpeg">
-            <p><strong>Hi! My name is Matt Gibbons</strong>and I am a Front-End Developer based in Kingston,<br> New York. At 30 years old, I decided to self-teach myself web development and<br> jump into a new career.</p>
-            <p>As a web developer, my goal is to create<span style="color: #107896">fun, unique, and fast</span>websites. </p>
-            <p>I graduated from SUNY Cortland in 2015 with a Bachelors' Degree in Sport Management<br> and realized working in sports wasn't the direction I wanted to go. After a few years<br> of bouncing between jobs and not having that feeling of being fulfilled career wise,<br> I dove right in and dedicated my time to learning Front-End Development.</p>
-            <p>In my free time I enjoy the misery of being a Mets, Islanders, and very randomly,<br> a Tennessee Titans fan. Besides watching sports, I also like to play softball, volleyball,<br> golf, do workout challenges with friends, check out cool breweries, find the perfect<br> Old Fashioned with a big square ice cube, and of course, a nice binge session of a show.</p>
-            
-        </div>
+            <div class="about-me-text">
+                <h2>Hey, I'm Matt!</h2>
+                <p>I am a self-taught Front-End Developer based in Kingston, New York. At 30 years old,<br>I decided to self-teach myself web development and jump into a new career.</p>
+                <p>As a web developer, my goal is to create <span style="color: #107896"> fun, unique, and fast</span> websites. </p>
+                <p>I graduated from SUNY Cortland in 2015 with a Bachelors' Degree in Sport Management<br> and realized working in sports wasn't the direction I wanted to go. After a few years<br> of bouncing between jobs and not having that feeling of being fulfilled career wise,<br> I dove right in and dedicated my time to learning Front-End Development.</p>
+                <p>In my free time I enjoy the misery of being a Mets, Islanders, and very randomly,<br> a Tennessee Titans fan. Besides watching sports, I also like to play softball, volleyball,<br> golf, do workout challenges with friends, check out cool breweries, find the perfect<br> Old Fashioned with a big square ice cube, and of course, a nice binge session of a show.</p> 
+            </div>
+            <div class="social-media">
+            <div class="links">
+                <h2>Social Media</h2>
+                <a href="https://twitter.com/Matt_Gibbons5"><img src="resources/img/twitter.png" alt="twitter"></a>
+                <a href="https://www.instagram.com/matt_gibbons5/"><img src="resources/img/insta.png" alt="instagram"></a>
+                <a href="https://www.linkedin.com/in/gibbonsmatt/"><img src="resources/img/linkedin.png" alt="linkedin"></a>
+                <a href="https://github.com/mgibbons8592"><img src="resources/img/git.jpeg" alt="github"></a>
+            </div>
+            </div>
     </section>
 
     <!--Resume-->
     <section id="resume">
-        <h2 id="header">Resume</h2>
+        <h2 id="header">RESUME</h2>
         <div class="resume-pic">
-            <img src="resources/img/Resume.pdf">
+            <img src="resources/img/Resume.pdf" alt="resume">
         </div>
     </section>
 
 <!--Certificates-->
     <section id="certificates">
-        <h2 id="header">Certificates</h2>
+        <h2 id="header">CERTIFICATES</h2>
         <div class="courses">
             <div class="career-path">
                 <span>Codecademy: Front-End Engineer Career Path</span>
@@ -64,26 +78,26 @@
 
 <!--Skills-->
     <section id="skills">
-        <h2 id="header">Skills</h2>
+        <h2 id="header">SKILLS</h2>
         <div class="skills-icons">
             <div class="html">
-                <img src="resources/img/html5blackk.jpg">
+                <img src="resources/img/html5blackk.jpg" alt="html">
                 <span class="caption">HTML</span>
             </div>
             <div class="css">
-                <img src="resources/img/css3black.jpg">
+                <img src="resources/img/css3black.jpg" alt="css">
                 <span class="caption">CSS</span>
             </div>
             <div class="java">
-                <img src="resources/img/javablack.jpg">
+                <img src="resources/img/javablack.jpg" alt="java">
                 <span class="caption">Java</span>
             </div>
             <div class="github">
-                <img src="resources/img/git.jpeg">
+                <img src="resources/img/git.jpeg" alt="github">
                 <span class="caption">GitHub</span>
             </div>
             <div class="git">
-                <img src="resources/img/git.png">
+                <img src="resources/img/git.png" alt="git">
                 <span class="caption">Git</span>
             </div>
         </div>
@@ -91,24 +105,24 @@
 
 <!--Projects-->
     <section id="projects">
-        <h2 id="header">Projects</h2>
+        <h2 id="header">PROJECTS</h2>
     <div class="project-pic">
-        <img src="resources/img/teacozy.jpeg">
-        <img src="resources/img/excrusion.jpeg">
+        <img src="resources/img/teacozy.jpeg" alt="teacozy">
+        <img src="resources/img/excrusion.jpeg" alt="excursion">
     </div>
     </section>
 
 <!--Contact-->
     <section id="contact">
-        <h2>Contact</h2>
+        <h2>CONTACT</h2>
         <h3>Lets Get Started</h3>
         <p>mgibbons8592@gmail.com</p>
         <p>(845)417-6894</p>
     <div class="icons">
-        <a href="https://twitter.com/Matt_Gibbons5"><img src="resources/img/twitter.png"></a>
-        <a href="https://www.instagram.com/matt_gibbons5/"><img src="resources/img/insta.png"></a>
-        <a href="https://www.linkedin.com/in/gibbonsmatt/"><img src="resources/img/linkedin.png"></a>
-        <a href="https://github.com/mgibbons8592"><img src="resources/img/git.jpeg"></a>
+        <a href="https://twitter.com/Matt_Gibbons5"><img src="resources/img/twitter.png" alt="twitter"></a>
+        <a href="https://www.instagram.com/matt_gibbons5/"><img src="resources/img/insta.png" alt="instagram"></a>
+        <a href="https://www.linkedin.com/in/gibbonsmatt/"><img src="resources/img/linkedin.png" alt="linkedin"></a>
+        <a href="https://github.com/mgibbons8592"><img src="resources/img/git.jpeg" alt="github"></a>
     </div>
     </section>
 </body>
