Media Queries added

--- a/index.html
+++ b/index.html
@@ -12,118 +12,90 @@
 <!--Navigation-->
     <nav class="navbar">
         <ul>
-            <span><strong>Matt Gibbons: Font-End Developer</strong></span>
+            <span>Matt Gibbons: Font-End Developer</span>
             <li><a href="#contact">Contact</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#skills">Skills</a></li>
             <li><a href="#certificates">Certificates</a></li>
-            <li><a href="#resume">Resume</a></li>
             <li><a href="#about-me">About Me</a></li>
         </ul>
     </nav>
 
 <!--Me-->
+<div class="wrapper">
     <section id="me">
             <img src="resources/img/matt.jpeg" alt="me">
             <p>Matt Gibbons</p>
             <p>Front-End Developer</p>
+            <a href="file:///C:/Users/mgibb/Downloads/Matthew_Gibbons_Resume.pdf" target="_blank">Resume</a>
     </section>
+</div>
 
 <!--About Me-->
+<div class="wrapper">
     <section id="about-me">
             <div class="about-me-text">
                 <h2>Hey, I'm Matt!</h2>
-                <p>I am a self-taught Front-End Developer based in Kingston, New York. At 30 years old,<br>I decided to self-teach myself web development and jump into a new career.</p>
+                <p>I am a self-taught Front-End Developer based in Kingston, New York. At 30 years old, I decided to self-teach myself web development and jump into a new career.</p>
                 <p>As a web developer, my goal is to create <span style="color: #107896"> fun, unique, and fast</span> websites. </p>
-                <p>I graduated from SUNY Cortland in 2015 with a Bachelors' Degree in Sport Management<br> and realized working in sports wasn't the direction I wanted to go. After a few years<br> of bouncing between jobs and not having that feeling of being fulfilled career wise,<br> I dove right in and dedicated my time to learning Front-End Development.</p>
-                <p>In my free time I enjoy the misery of being a Mets, Islanders, and very randomly,<br> a Tennessee Titans fan. Besides watching sports, I also like to play softball, volleyball,<br> golf, do workout challenges with friends, check out cool breweries, find the perfect<br> Old Fashioned with a big square ice cube, and of course, a nice binge session of a show.</p> 
+                <p>I graduated from SUNY Cortland in 2015 with a Bachelors' Degree in Sport Management and realized working in sports wasn't the direction I wanted to go. After a few years of bouncing between jobs and not having that feeling of being fulfilled career wise, I dove right in and dedicated my time to learning Front-End Development.</p>
+                <p>In my free time I enjoy the misery of being a Mets, Islanders, and very randomly, a Tennessee Titans fan. Besides watching sports, I also like to play softball, volleyball, golf, do workout challenges with friends, check out cool breweries, find the perfect Old Fashioned with a big square ice cube, and of course, a nice binge session of a show.</p> 
             </div>
             <div class="social-media">
             <div class="links">
-                <h2>Social Media</h2>
-                <a href="https://twitter.com/Matt_Gibbons5"><img src="resources/img/twitter.png" alt="twitter"></a>
-                <a href="https://www.instagram.com/matt_gibbons5/"><img src="resources/img/insta.png" alt="instagram"></a>
-                <a href="https://www.linkedin.com/in/gibbonsmatt/"><img src="resources/img/linkedin.png" alt="linkedin"></a>
-                <a href="https://github.com/mgibbons8592"><img src="resources/img/git.jpeg" alt="github"></a>
+                <h2>CONNECT</h2>
+                <a href="https://twitter.com/Matt_Gibbons5" target="_blank"><img src="resources/img/twitter.png" alt="twitter"></a>
+                <a href="https://www.instagram.com/matt_gibbons5/" target="_blank"><img src="resources/img/insta.png" alt="instagram"></a>
+                <a href="https://www.linkedin.com/in/gibbonsmatt/" target="_blank"><img src="resources/img/linkedin.png" alt="linkedin"></a>
+                <a href="https://github.com/mgibbons8592" target="_blank"><img src="resources/img/git.jpeg" alt="github"></a>
             </div>
             </div>
     </section>
-
-    <!--Resume-->
-    <section id="resume">
-        <h2 id="header">RESUME</h2>
-        <div class="resume-pic">
-            <img src="resources/img/Resume.pdf" alt="resume">
-        </div>
-    </section>
+</div>
 
 <!--Certificates-->
+<div class="wrapper">
     <section id="certificates">
         <h2 id="header">CERTIFICATES</h2>
         <div class="courses">
             <div class="career-path">
-                <span>Codecademy: Front-End Engineer Career Path</span>
+                <p>Codecademy: Front-End Engineer Career Path</p>
             </div>
             <div class="css-cert">
-                <span>Codecademy: Learn CSS</span>
+                <p>Codecademy: Learn CSS</p>
             </div>
             <div class="html-cert">
-                <span>Codecademy: Learn HTML</span>
+                <p>Codecademy: Learn HTML</p>
             </div>
             <div class="java-cert">
-                <span>Codecademy: Learn JavaScript</span>
+                <p>Codecademy: Learn JavaScript</p>
             </div>
         </div>
     </section>
-
-<!--Skills-->
-    <section id="skills">
-        <h2 id="header">SKILLS</h2>
-        <div class="skills-icons">
-            <div class="html">
-                <img src="resources/img/html5blackk.jpg" alt="html">
-                <span class="caption">HTML</span>
-            </div>
-            <div class="css">
-                <img src="resources/img/css3black.jpg" alt="css">
-                <span class="caption">CSS</span>
-            </div>
-            <div class="java">
-                <img src="resources/img/javablack.jpg" alt="java">
-                <span class="caption">Java</span>
-            </div>
-            <div class="github">
-                <img src="resources/img/git.jpeg" alt="github">
-                <span class="caption">GitHub</span>
-            </div>
-            <div class="git">
-                <img src="resources/img/git.png" alt="git">
-                <span class="caption">Git</span>
-            </div>
-        </div>
-    </section>
+</div>
 
 <!--Projects-->
+<div class="wrapper">
     <section id="projects">
         <h2 id="header">PROJECTS</h2>
-    <div class="project-pic">
-        <img src="resources/img/teacozy.jpeg" alt="teacozy">
-        <img src="resources/img/excrusion.jpeg" alt="excursion">
-    </div>
+        <div class="project-links">
+            <a href="file:///C:/Users/mgibb/OneDrive/Desktop/Projects/rnrlawns/index.html" target="_blank">R&R Lawns & Landscaping</a>
+            <a href="file:///C:/Users/mgibb/OneDrive/Desktop/Projects/teacozy/index.html" target="_blank">Tea Cozy</a>
+            <a href="file:///C:/Users/mgibb/OneDrive/Desktop/Projects/excursion/index.html" target="_blank">Excursion</a>
+        </div>
     </section>
+</div>
 
 <!--Contact-->
+<div class="wrapper">
     <section id="contact">
-        <h2>CONTACT</h2>
-        <h3>Lets Get Started</h3>
-        <p>mgibbons8592@gmail.com</p>
-        <p>(845)417-6894</p>
-    <div class="icons">
-        <a href="https://twitter.com/Matt_Gibbons5"><img src="resources/img/twitter.png" alt="twitter"></a>
-        <a href="https://www.instagram.com/matt_gibbons5/"><img src="resources/img/insta.png" alt="instagram"></a>
-        <a href="https://www.linkedin.com/in/gibbonsmatt/"><img src="resources/img/linkedin.png" alt="linkedin"></a>
-        <a href="https://github.com/mgibbons8592"><img src="resources/img/git.jpeg" alt="github"></a>
-    </div>
+        <p>Matt Gibbons 2023 | mgibbons8592@gmail.com</p>
+        <div class="contact-icons">
+            <a href="https://twitter.com/Matt_Gibbons5" target="_blank"><img src="resources/img/twitter.png" alt="twitter"></a>
+            <a href="https://www.instagram.com/matt_gibbons5/" target="_blank"><img src="resources/img/insta.png" alt="instagram"></a>
+            <a href="https://www.linkedin.com/in/gibbonsmatt/" target="_blank"><img src="resources/img/linkedin.png" alt="linkedin"></a>
+            <a href="https://github.com/mgibbons8592" target="_blank"><img src="resources/img/git.jpeg" alt="github"></a>
+        </div>
     </section>
+</div>
 </body>
 </html>
