new font and color

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./resources/CSS/style.css" type="text/css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <title>Matt Gibbons</title>
 </head>
 <body>
@@ -34,7 +37,7 @@
 <div class="wrapper">
     <section id="about-me">
             <div class="about-me-text">
-                <h2>Hey, I'm Matt!</h2>
+                <h2 class="left">Hey, I'm Matt!</h2>
                 <p>I am a self-taught Front-End Developer based in Kingston, New York. At 30 years old, I decided to self-teach myself web development and jump into a new career.</p>
                 <p>As a web developer, my goal is to create <span style="color: #107896"> fun, unique, and fast</span> websites. </p>
                 <p>I graduated from SUNY Cortland in 2015 with a Bachelors' Degree in Sport Management and realized working in sports wasn't the direction I wanted to go. After a few years of bouncing between jobs and not having that feeling of being fulfilled career wise, I dove right in and dedicated my time to learning Front-End Development.</p>
@@ -43,9 +46,9 @@
             <div class="social-media">
             <div class="links">
                 <h2>CONNECT</h2>
-                <a href="https://twitter.com/Matt_Gibbons5" target="_blank"><img src="resources/img/twitter.png" alt="twitter"></a>
-                <a href="https://www.instagram.com/matt_gibbons5/" target="_blank"><img src="resources/img/insta.png" alt="instagram"></a>
                 <a href="https://www.linkedin.com/in/gibbonsmatt/" target="_blank"><img src="resources/img/linkedin.png" alt="linkedin"></a>
+                <a href="https://www.instagram.com/matt_gibbons5/" target="_blank"><img src="resources/img/insta.png" alt="instagram"></a>
+                <a href="https://twitter.com/Matt_Gibbons5" target="_blank"><img src="resources/img/twitter.png" alt="twitter"></a>
                 <a href="https://github.com/mgibbons8592" target="_blank"><img src="resources/img/git.jpeg" alt="github"></a>
             </div>
             </div>
@@ -55,7 +58,7 @@
 <!--Certificates-->
 <div class="wrapper">
     <section id="certificates">
-        <h2 id="header">CERTIFICATES</h2>
+        <h2>CERTIFICATES</h2>
         <div class="courses">
             <div class="career-path">
                 <p>Codecademy: Front-End Engineer Career Path</p>
@@ -76,7 +79,7 @@
 <!--Projects-->
 <div class="wrapper">
     <section id="projects">
-        <h2 id="header">PROJECTS</h2>
+        <h2>PROJECTS</h2>
         <div class="project-links">
             <a href="file:///C:/Users/mgibb/OneDrive/Desktop/Projects/rnrlawns/index.html" target="_blank">R&R Lawns & Landscaping</a>
             <a href="file:///C:/Users/mgibb/OneDrive/Desktop/Projects/teacozy/index.html" target="_blank">Tea Cozy</a>
@@ -88,11 +91,11 @@
 <!--Contact-->
 <div class="wrapper">
     <section id="contact">
-        <p>Matt Gibbons 2023 | mgibbons8592@gmail.com</p>
+            <p>Matt Gibbons 2023 | mgibbons8592@gmail.com</p>
         <div class="contact-icons">
-            <a href="https://twitter.com/Matt_Gibbons5" target="_blank"><img src="resources/img/twitter.png" alt="twitter"></a>
-            <a href="https://www.instagram.com/matt_gibbons5/" target="_blank"><img src="resources/img/insta.png" alt="instagram"></a>
             <a href="https://www.linkedin.com/in/gibbonsmatt/" target="_blank"><img src="resources/img/linkedin.png" alt="linkedin"></a>
+            <a href="https://www.instagram.com/matt_gibbons5/" target="_blank"><img src="resources/img/insta.png" alt="instagram"></a>
+            <a href="https://twitter.com/Matt_Gibbons5" target="_blank"><img src="resources/img/twitter.png" alt="twitter"></a>
             <a href="https://github.com/mgibbons8592" target="_blank"><img src="resources/img/git.jpeg" alt="github"></a>
         </div>
     </section>
