--- a/index.html
+++ b/index.html
@@ -79,11 +79,20 @@
 <!--Projects-->
 <div class="wrapper">
     <section id="projects">
-        <h2>PROJECTS</h2>
+            <h2 class="white">PROJECTS</h2>
         <div class="project-links">
+        <div class="thumb">
             <a href="file:///C:/Users/mgibb/OneDrive/Desktop/Projects/rnrlawns/index.html" target="_blank">R&R Lawns & Landscaping</a>
+            <img src="resources/img/rnrlawnsthumb.jpeg" alt="thumb">
+        </div>
+        <div class="thumb">
             <a href="file:///C:/Users/mgibb/OneDrive/Desktop/Projects/teacozy/index.html" target="_blank">Tea Cozy</a>
+            <img src="resources/img/teacozythumb.jpeg" alt="thumb">
+        </div>
+        <div class="thumb">
             <a href="file:///C:/Users/mgibb/OneDrive/Desktop/Projects/excursion/index.html" target="_blank">Excursion</a>
+            <img src="resources/img/excursionthumb.jpeg" alt="thumb">
+        </div>
         </div>
     </section>
 </div>
